--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -25,7 +25,8 @@
 
         <div class="row">
             <div class="col">
-                {% if bag_items %}
+                {% if bag_items %}>
+                    {{ request.session.bag }}
                     <div class="table-responsive rounded">
                         <table class="table table-sm table-borderless">
                             <thead class="text-black">
